--- a/client/index.html
+++ b/client/index.html
@@ -12,6 +12,7 @@
     <script src="models/SongModel.js"></script>
     <script src="collections/Songs.js"></script>
     <script src="collections/SongQueue.js"></script>
+    <script src="collections/eventSystemDecorator.js"></script>
     <script src="models/AppModel.js"></script>
 
     <script src="views/PlayerView.js"></script>
@@ -22,9 +23,12 @@
     <script>
       $(function() {
         // set up model objects
+
+
         var library = new Songs(songData);
         var app = new AppModel({library: library});
 
+        console.log(library);
         // build a view for the top level of the whole app
         var appView = new AppView({model: app});
 
