Completed tests except playerview
Need to get the songqueue to enqueue songs on library click

--- a/client/index.html
+++ b/client/index.html
@@ -17,6 +17,7 @@
 
     <script src="views/PlayerView.js"></script>
     <script src="views/LibraryView.js"></script>
+    <script src="views/SongQueueView.js"></script>
     <script src="views/LibraryEntryView.js"></script>
     <script src="views/AppView.js"></script>
 
@@ -28,7 +29,7 @@
         var library = new Songs(songData);
         var app = new AppModel({library: library});
 
-        console.log(library);
+        // console.log(library);
         // build a view for the top level of the whole app
         var appView = new AppView({model: app});
 
