--- a/client/index.html
+++ b/client/index.html
@@ -6,34 +6,31 @@
     <script src="bower_components/jquery/jquery.min.js"></script>
     <script src="bower_components/underscore/underscore.js"></script>
     <script src="bower_components/backbone/backbone.js"></script>
-
+    <script src="env/config.js"></script>
     <script src="data/data.js"></script>
 
     <script src="models/SongModel.js"></script>
     <script src="collections/Songs.js"></script>
     <script src="collections/SongQueue.js"></script>
-    <script src="collections/eventSystemDecorator.js"></script>
     <script src="models/AppModel.js"></script>
 
     <script src="views/PlayerView.js"></script>
     <script src="views/LibraryView.js"></script>
     <script src="views/SongQueueView.js"></script>
+    <script src="views/SongQueueEntryView.js"></script>
     <script src="views/LibraryEntryView.js"></script>
     <script src="views/AppView.js"></script>
 
     <script>
-      $(function() {
+      $(document).ready(function() {
         // set up model objects
-
-
+        // console.log('songData', songData);
         var library = new Songs(songData);
+        // console.log(library.models);
         var app = new AppModel({library: library});
 
-        // console.log(library);
-        // build a view for the top level of the whole app
         var appView = new AppView({model: app});
 
-        // put the view onto the screen
         $('body').append(appView.render());
       });
     </script>
